# mx-keyboard-switcher

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.ru.md
.github/workflows/: ci.yml  release.yml
crates/mxks-app/: Cargo.toml  build.rs
crates/mxks-app/src/: autostart.rs  config_io.rs  corrector.rs  engine.rs  main.rs  tray.rs  usage_io.rs
crates/mxks-core/: Cargo.toml  build.rs
crates/mxks-core/src/: buffer.rs  config.rs  convert.rs  detect.rs  dict.rs  hotkey.rs  keycode.rs  layout.rs  lib.rs  usage.rs
crates/mxks-core/tests/: corpus.rs
crates/mxks-platform/: Cargo.toml
crates/mxks-platform/src/: event.rs  lib.rs
crates/mxks-platform/src/linux_x11/: focus_watch.rs  inject.rs  intercept.rs  keymap.rs  mod.rs  overlay.rs  record.rs  suppress.rs  xkb.rs
crates/mxks-platform/src/macos/: inject.rs  keymap.rs  layout.rs  mod.rs  tap.rs
crates/mxks-platform/src/windows/: hook.rs  inject.rs  keymap.rs  layout.rs  mod.rs  overlay.rs
crates/mxks-platform/tests/: x11_live.rs
data/: it_terms.txt
docs/: manual-test.md
scripts/: gen-icons.py  install.ps1  install.sh  run-x11-live-tests.sh
