[package]
name = "mxks-app"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "mx-keyboard-switcher"

[[bin]]
name = "mx-keyboard-switcher"
path = "src/main.rs"

[features]
# Native tray icon. On by default; disable with `--no-default-features` to
# build a headless binary.
default = ["tray"]
tray = ["dep:image", "dep:ksni", "dep:tray-icon", "dep:winit"]

[dependencies]
mxks-core = { path = "../mxks-core" }
mxks-platform = { path = "../mxks-platform" }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
# HKCU Run-key access for the "Start at login" toggle.
winreg = "0.56"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = { version = "0.24.1", default-features = false, optional = true }
winit = { version = "0.30.13", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Pure-Rust StatusNotifierItem tray (zbus, no GTK/libdbus). Lightweight
# async-io runtime instead of tokio.
ksni = { version = "0.3", default-features = false, features = ["blocking", "async-io"], optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
